# TestDoubletapp

./: .dockerignore  .env  .env.minio  .env_db  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
command/: out_json_stdout.py
config/: config.py
migrations/: env.py
migrations/versions/: 32c64cc56c28_added_required_tables.py  32fbb1a1ad9b_.py  81af2d61f94e_added_required_tables.py  8446e6eda3c0_.py  88250a0e7f2e_.py  9485e117ca87_added_required_tables.py  abf53b799910_.py  b5ea29d8a92b_added_required_tables.py  c8d46f359695_added_required_tables.py  cc6fa378ceaf_added_required_tables.py
nginx/: default.conf
src/: routes.py
src/config/: .env.app  .env.minio  app_config.py  minio_config.py
src/config/database/: db_config.py  db_helper.py
src/controllers/: pet_controller.py
src/models/: base_model.py  pet.py  pets.py  photo_pet.py
src/repositories/: base_repository.py  db_repository.py  file_repository.py  pet_repository.py
src/schemas/: pet_schema.py
src/services/: base_service.py  pet_servise.py  photo_service.py
src/utils/: add_files_minio.py  key_authentication.py  operations_files_minio.py  pet_utils.py  response_create_pet_util.py
